@@ -2,6 +2,9 @@ $Id$
 
 2.0.6-pre-2
 	Started adding code to do question/response stuff
+	aimlogin will now accept the screenname without a password and ask
+	   for the password such that it is not echo'd to the terminal
+	Fixed documentation bug in aimwrite
 
 2.0.6-pre-1
 	Initialze $owl::auth
